<resources>
    <string name="app_name">practical2_part_a</string>
    <string name="Toast_text">Toast</string>
    <string name="count_text">COUNT</string>
    <string name="zero">0</string>
    <string name="toast_message">ANG XUE QI 19WMD11042</string>
    <string name="Hello_Toast">Hello Toast</string>
    <string name="Hello_Constraint">Hello Constraint</string>
    <string name="zero_text">ZERO</string>
</resources>